# Edge-CI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: validation-2026-07-17.md
examples/: edgeci.toml.example  workflow.yml.example
src/edgeci/: __init__.py  adapter.py  calibrate.py  cli.py  config.py  doctor.py  hashing.py  lock.py  orchestrator.py  probe.py  report.py  runner.py  schedule.py  stats.py  verdict.py
tests/: __init__.py  conftest.py  test_adapter.py  test_cli.py  test_config.py  test_orchestrator.py  test_report.py  test_runner_contract.py  test_schedule.py  test_stats.py  test_verdict.py
tests/fixtures/: sample_bench_output.jsonl  sample_config.toml
